2011-04-11  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Sub-Frame content is not updated when scrolling in certain circumstances
        https://bugs.webkit.org/show_bug.cgi?id=50373

        Make sure that we invalidate the backing store when using TILED_BACKING_STORE
        and the page contains sub frames. This bug appears only when frame flattening is
        disabled and scrollable subframes.

        Original patch from Thomas Thrainer.

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::invalidateWindow):

Canonical link: https://commits.webkit.org/73241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83473 268f45cc-cd09-0410-ab3c-d52691b4dbfc